Revert "Caja, Nemo: ensure caret in renaming label is visible"
This reverts commit 1147914097234d4d6fda9aff0353d7e698fd7667.

--- a/desktop-themes/BlackMATE/gtk-3.0/other-applications.css
+++ b/desktop-themes/BlackMATE/gtk-3.0/other-applications.css
@@ -269,10 +269,6 @@ NemoQueryEditor .toolbar .entry:focus {
 	text-shadow: none;
 }
 
-.nemo-desktop .entry{
-	caret-color: #000000;
-}
-
 /*************
  * Yumex-DNF *
  *************/
